2005-12-22  Parthasarathi Susarla <sparthasarathi@novell.com>
	
	* Evolution-Component.idl
	* Evolution-Shell.idl
	* Evolution.idl:
	Remove duplicate definitions and circular dependencies.
	
	* e-shell.c: comment out the implementation for findComponent. 
	If implemented, this creates a circular dependency between the
	Shell.idl and Component.idl. 
	** This is just a work-around **

2005-12-22  Shreyas Srinivasan <sshreyas@novell.com>

	* Network Manager Support for shell
	
	* Evolution-Component.idl (setLineStatus): Add enum ShellState
	which can represent network down rather than just a boolean.
	
	* e-shell-nm.c: Add new file handles offline/ online signals
	generated by the Network Manager using the native dbus interface.

	* e-shell-nm-glib.c: Add new file handles offline/ online signals
	generated by the Network Manager using the glib interface.
	
	* Makefile.am: Add e-shell-nm.c or e-shell-nm-glib.c to the list
	of files built into evolution_sources depending on how evolution
	is configured.
	
	* e-shell-window_commands.c: Use new changed signature of
	e_shell_go_offline.
	
	* e-shell-window.c (setup_status_bar): Initialise the dbus
	connection.
	
	* e-shell.c (set_line_status): Handle network down triggered
	Force_offline. New signatures for e_shell_go_offline and 
	e_shell_go_online.
	
	* e-shell.h: New function signatures for e_shell_go_offline and
	e_shell_go_online.
	
2005-12-21  Not Zed  <NotZed@Ximian.com>
 
 	* e-shell-view.c (impl_ShellView_setTitle): take a component id
 	argument.
 
 	* e-shell-window.c (component_view_free): release the corba object
 	properly.
 	(e_shell_window_set_title): new helper to set the title for the
 	component.
 	(switch_view): use the component specific title if available or
 	fallback to the component name.
 
2004-12-21  Not Zed  <NotZed@Ximian.com>
 
 	** See bug #60354.
 
 	* Evolution-Component.idl: createControls -> createView and
 	ComponentView to keep track of things.
 