@@ -57,7 +57,7 @@ Once deleted, you cannot downgrade to the previous version of Evolution without 
   <_secondary xml:space="preserve">Your system configuration does not match your Evolution configuration.
 
 Click help for details</_secondary>
-  <help uri="http://support.ximian.com/q?54"/>
+  <help uri="http://go-evolution.org/FAQ#What_does_.22Your_system_configuration_does_not_match_your_Evolution_configuration.22_mean.3F"/>
   <button stock="gtk-quit" response="GTK_RESPONSE_CANCEL"/>
  </error>
 
@@ -69,13 +69,13 @@ Click help for details</_secondary>
 {0}
 
 Click help for details.</_secondary>
-  <help uri="http://support.ximian.com/q?54"/>
+  <help uri="http://go-evolution.org/FAQ#What_does_.22Your_system_configuration_does_not_match_your_Evolution_configuration.22_mean.3F"/>
   <button stock="gtk-quit" response="GTK_RESPONSE_CANCEL"/>
  </error>
 
  <error id="forget-passwords" type="question" default="GTK_RESPONSE_OK">
-  <_primary>Are you sure you want to forget all remembered passwords? </_primary>
-  <_secondary xml:space="preserve">Forgetting your passwords will clear all remembered passwords. You will be reprompted next time they are needed. </_secondary>
+  <_primary>Are you sure you want to forget all remembered passwords?</_primary>
+  <_secondary xml:space="preserve">Forgetting your passwords will clear all remembered passwords. You will be reprompted next time they are needed.</_secondary>
   <button stock="gtk-cancel" response="GTK_RESPONSE_CANCEL"/>
   <button _label="_Forget" response="GTK_RESPONSE_OK"/>
  </error>
